@@ -1,0 +1,54 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<database>
+ <table>
+  <name>test</name>
+  <declaration>
+   <field>
+    <name>test_blob</name>
+    <type>blob</type>
+   </field>
+   <field>
+    <name>test_boolean</name>
+    <type>boolean</type>
+    <default>true</default>
+   </field>
+   <field>
+    <name>test_clob</name>
+    <type>clob</type>
+   </field>
+   <field>
+    <name>test_date</name>
+    <type>date</type>
+   </field>
+   <field>
+    <name>test_decimal</name>
+    <type>decimal</type>
+    <length>10</length>
+   </field>
+   <field>
+    <name>test_float</name>
+    <type>float</type>
+   </field>
+   <field>
+    <name>test_integer</name>
+    <type>integer</type>
+   </field>
+   <field>
+    <name>test_text</name>
+    <type>text</type>
+    <length>255</length>
+   </field>
+   <field>
+    <name>test_timestamp</name>
+    <type>timestamp</type>
+    <notnull>true</notnull>
+   </field>
+   <index>
+    <name>test_integer</name>
+    <field>
+     <name>test_integer</name>
+    </field>
+   </index>
+  </declaration>
+ </table>
+</database>
